--- a/Labor/LabsPractic/Lab5.ipynb
+++ b/Labor/LabsPractic/Lab5.ipynb
@@ -18,14 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from scipy.stats import norm\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy.stats import expon"
+    "from scipy.stats import expon, uniform\n",
+    "import random"
    ]
   },
   {
@@ -273,6 +274,148 @@
     "plt.ylabel(\"Probability\")\n",
     "plt.legend()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 3\n",
+    "\n",
+    "Jedesmal, wenn Professor X eine Gruppe von 6 Personen trifft, wettet er 6 e, dass mindestens zwei von diesen 6 Personen im gleichen Monat Geburtstag haben. Anhand Simulationen scha ̈tze man: den durchschnittlichen Gewinn oder Verlust bei dieser Wette, bzw. die Wahrscheinlichkeit p, mit welcher Professor X eine Wette gewinnt.\n",
+    "Hinweis:\n",
+    ".\n",
+    "Es gilt p = P (”mindestens 2 Personen von 6 haben in demselben Monat Geburtstag”)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average profit win: 3.42\n",
+      "Win probability: 0.78\n"
+     ]
+    }
+   ],
+   "source": [
+    "simulations = 10000\n",
+    "\n",
+    "total_profit_wins = 0\n",
+    "total_wins = 0\n",
+    "\n",
+    "for _ in range(simulations):\n",
+    "\n",
+    "    birthdays = [random.randint(1, 12) for _ in range(6)]\n",
+    "\n",
+    "    if len(birthdays) != len(set(birthdays)):\n",
+    "        total_profit_wins += 6\n",
+    "        total_wins += 1\n",
+    "    else:\n",
+    "        total_profit_wins -= 6\n",
+    "\n",
+    "\n",
+    "average_proft_win = total_profit_wins / simulations\n",
+    "win_probability = total_wins / simulations\n",
+    "\n",
+    "print(f\"Average profit win: {average_proft_win:.2f}\")\n",
+    "print(f\"Win probability: {win_probability:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 4 ~ NU IMI DAU SEAMA INCA\n",
+    "\n",
+    "In einer Urne sind 4 weiße und 6 schwarze Kugeln. Ein Spieler zieht nacheinander eine Kugel ohne Zuru ̈cklegen. Das Spiel ist aus, wenn er eine weisse Kugel zieht oder wenn er dreimal gezogen hat. Die Zufallsvariable X zeigt die Anzahl der gezogenen schwarzen Kugeln.\n",
+    "- a) Welches ist die (theoretische) Wahrscheinlichkeitsverteilung von X und simuliere zuf ̈allige Werte fu ̈r X. \n",
+    "- b) Der Spieler erha ̈lt 30 Punkte, wenn er drei schwarze Kugeln gezogen hat. Er erh ̈alt 25 Punkte, wenn er zwei schwarze Kugeln zieht. In allen anderen Fa ̈llen verliert er 5 Punkte. Anhand Simulationen scha ̈tze man die mittlere Punktezahl des Spielers. Man vergleiche das Ergebnis mit dem theoretischen Ergebnis. Hinweise: \n",
+    "- a) Die Zufallsvariable X ist die Anzahl der gezogenen schwarzen Kugeln. Die (theoretische) Wahrscheinlichkeitsverteilung von X ist:\n",
+    "P(X=0)=P(ersteKugelistweiß)= 4. 10\n",
+    "P (X = 1) = P (erste Kugel schwarz, zweite Kugel weiß) = ...\n",
+    "P (X = 2) = P (erste und zweite Kugel schwarz, dritte Kugel weiß) = ... P (X = 3) = P (erste und zweite und dritte Kugel schwarz) = ...\n",
+    "- b) Die Zufallsvariable Y zeigt die Punktezahl des Spielers an; die (theoretische) Wahrscheinlichkeitsverteilung von Y ist:\n",
+    "P(Y =30)=...\n",
+    "P(Y =25)=...\n",
+    "P(Y =−5)=...\n",
+    "=⇒ der theoretische Erwartungswert von Y ist E(Y ) = ... (Punkte).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_white_ball = 4 / 10\n",
+    "\n",
+    "simulations = 10000\n",
+    "simulated_X_values = []\n",
+    "\n",
+    "for _ in range(simulations):\n",
+    "    x = 0\n",
+    "    for _ in range(3):\n",
+    "        #determine if the drawn ball is black\n",
+    "        if random.random() > p_white_ball:\n",
+    "            x += 1\n",
+    "        else:\n",
+    "            break\n",
+    "\n",
+    "    simulated_X_values.append(x)\n",
+    "\n",
+    "#Compute the theoretical probabilities\n",
+    "p_X_0 = p_white_ball\n",
+    "p_X_1 = (6/10) * p_white_ball\n",
+    "p_X_2 = (6/10) * (5/9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 5\n",
+    "\n",
+    "Man simuliere mit Hilfe von scipy.stats.uniform.rvs 1000 zuf ̈allige Punkte aus dem Quader [−1, 1] × [−1, 1] × [−1, 1] ⊂ R3.\n",
+    "Sei D die ZG welche Distanz dieser Punkte zum Ursprung (0,0,0) darstellt. Man sch ̈atze a) den Er- wartungswert (numpy.mean) und die Varianz von D (numpy.var)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estimated mean distance: 0.9531884113761223\n",
+      "Estiamted variance of distance: 0.0742131051366402\n"
+     ]
+    }
+   ],
+   "source": [
+    "simulations = 1000\n",
+    "random_points = uniform.rvs(loc=-1, scale=2, size=(simulations, 3))\n",
+    "\n",
+    "# print(random_points)\n",
+    "\n",
+    "distances = np.linalg.norm(random_points, axis=1)\n",
+    "\n",
+    "#Compute the mean distances\n",
+    "\n",
+    "mean_distance = np.mean(distances)\n",
+    "\n",
+    "#Compute the variance\n",
+    "\n",
+    "variance_distance = np.var(distances)\n",
+    "\n",
+    "print(f\"Estimated mean distance: {mean_distance}\")\n",
+    "print(f\"Estiamted variance of distance: {variance_distance}\")"
    ]
   },
   {
